<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp">

    <TextView
        android:id="@+id/sign_in_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AlertMe"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/alertme_logo"
        android:minWidth="96dp"
        android:minHeight="96dp"
        android:src="@drawable/ic_twotone_notifications_active"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_header" />

    <TextView
        android:id="@+id/emailInvalid"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:textColor="@color/red"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emailInvalid" />

    <TextView
        android:id="@+id/passwordInvalid"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:textColor="@color/red"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSignInClick"
        android:text="@string/sing_in_button_text"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_info" />

    <TextView
        android:id="@+id/sign_up_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>