<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.85"
        app:cardCornerRadius="10dp"

        app:strokeWidth="1.7dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10sp"
                android:text="@string/type"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/votes_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30sp"
                android:paddingRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Duplicate"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:paddingTop="10dp"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:onClick="onRadioButtonClicked"/>

            </LinearLayout>

            <TextView
                android:id="@+id/rangeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="30sp"
                android:text="@string/range"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableTint="@color/red"
                app:drawableTopCompat="@drawable/ic_baseline_pin_drop_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>